Update api client definitions and project dependencies
